<resources>
    <string name="app_name">Restaurantes</string>
    <string name="search">Search</string>
    <string name="comida">Comida</string>
    <string name="bebidas">Bebidas</string>
    <string name="complementos">Complementos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image_description">product image</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="description_header">Descripción:</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$107.50</string>
    <string name="opciones">Opciones:</string>
    <string name="add">Add</string>
    <string name="nameHeader">Nombre:</string>
    <string name="enter_name_hint">Ingresa el nombre...</string>
    <string name="registrar">Registrar</string>
    <string name="ver_comida">Ver comida</string>
    <string name="ver_bebidas">Ver bebidas</string>
    <string name="ver_complementos">Ver complementos</string>
    <string name="editar">Editar</string>
</resources>