<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/basicInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView
            android:id="@+id/productImage"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:padding="20dp"
            android:contentDescription="@string/product_image_description"
            android:src="@drawable/baseline_fastfood_24"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_toEndOf="@id/productImage"
            android:orientation="vertical"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry">
            <TextView
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:id="@+id/productPriceInProductActivity"
                android:gravity="start|bottom"
                android:text="@string/product_price"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="start"
                android:id="@+id/productNameInProductActivity"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/basicInfo"
        android:id="@+id/descriptionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_header"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="20dp"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/descriptionHeader"
        android:id="@+id/productDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/lorem"/>

</androidx.constraintlayout.widget.ConstraintLayout>