<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurant">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <TextView
        android:id="@+id/editTextNameHeader"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:text="@string/nameHeader"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextNameHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:hint="@string/enter_name_hint"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:text="@string/registrar" />
</androidx.constraintlayout.widget.ConstraintLayout>
